--- a/markup/index.html
+++ b/markup/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="wrapper">
-        <div class="container_section_first">
+        <div class="container_section_first"> <!-- Первый экран 70%  -->
             <header>
                 <nav>
                     <ul>
@@ -22,21 +22,21 @@
                     </ul>
                 </nav>
             </header>
-            <main>
+            <main>  <!-- изменить на section -->
                 <h1>Design and layout</h1>
                 <p>Lorem Ipsum is fish text often used in print and web design. Lorem Ipsum has been the standard "fish" for Latin texts since the early 16th century.</p>
                 <a href="#" class="butn">WRITE ME</a>
             </main>           
         </div>
-        <div class="container_section_second">
+        <div class="container_section_second">  <!-- Второй экран 30% с абаут -->
             <header>
                 <h2>About me</h2>
             </header>
-            <main>
+            <main> <!-- изменить на section -->
                 <p class="about_me">About meLorem Ipsum is fish text often used in print and web design. Lorem Ipsum has been the standard "fish" for Latin texts since the early 16th century.</p>
             </main>
         </div>
-        <div class="container_section_third">
+        <div class="container_section_third"> <!-- ряд свгшек с номером 20% -->
             <ul class="section_svg">  
                 <li>
                     <img src="./svg/Group.svg" alt="1">
@@ -82,16 +82,16 @@
                 </li>
             </ul>
         </div>
-        <div class="container_section_fourth">
+        <div class="container_section_fourth">  <!-- 100 экран с ютуб -->
             <header>
                 <h2>How do I work</h2>
             </header>
-            <main>
+            <main> <!-- изменить на section -->
                 <p>Lorem Ipsum is fish text often used in print and web design. Lorem Ipsum has been the standard "fish" for Latin texts since the early 16th century.</p>
                 <iframe src="https://www.youtube.com/embed/BSOjBZpAqFc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </main>
         </div>
-        <footer class="last_section">
+        <footer class="last_section"> <!-- футер и в африке футер  -->
             <div>
                 <h3>John Smith</h3>
                 <p>(c) 2018. All rights reserved.</p>
