--- a/markup/index.html
+++ b/markup/index.html
@@ -22,19 +22,19 @@
                     </ul>
                 </nav>
             </header>
-            <main>  <!-- изменить на section -->
+            <section>  <!-- изменить на section -->
                 <h1>Design and layout</h1>
                 <p>Lorem Ipsum is fish text often used in print and web design. Lorem Ipsum has been the standard "fish" for Latin texts since the early 16th century.</p>
                 <a href="#" class="butn">WRITE ME</a>
-            </main>           
+            </section>           
         </div>
         <div class="container_section_second">  <!-- Второй экран 30% с абаут -->
             <header>
                 <h2>About me</h2>
             </header>
-            <main> <!-- изменить на section -->
+            <section> <!-- изменить на section -->
                 <p class="about_me">About meLorem Ipsum is fish text often used in print and web design. Lorem Ipsum has been the standard "fish" for Latin texts since the early 16th century.</p>
-            </main>
+            </section>
         </div>
         <div class="container_section_third"> <!-- ряд свгшек с номером 20% -->
             <ul class="section_svg">  
@@ -86,10 +86,10 @@
             <header>
                 <h2>How do I work</h2>
             </header>
-            <main> <!-- изменить на section -->
+            <section> <!-- изменить на section -->
                 <p>Lorem Ipsum is fish text often used in print and web design. Lorem Ipsum has been the standard "fish" for Latin texts since the early 16th century.</p>
                 <iframe src="https://www.youtube.com/embed/BSOjBZpAqFc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-            </main>
+            </section>
         </div>
         <footer class="last_section"> <!-- футер и в африке футер  -->
             <div>
