--- a/markup/index.html
+++ b/markup/index.html
@@ -88,7 +88,7 @@
             </header>
             <section> <!-- изменить на section -->
                 <p>Lorem Ipsum is fish text often used in print and web design. Lorem Ipsum has been the standard "fish" for Latin texts since the early 16th century.</p>
-                <iframe src="https://www.youtube.com/embed/BSOjBZpAqFc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/BSOjBZpAqFc" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </section>
         </div>
         <footer class="last_section"> <!-- футер и в африке футер  -->
